--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ kramdown:
 sass:
   sass_dir: _sass
   style: :compressed
-ganalytics: '##p##' # Crear uno nuevo?
+ganalytics: 'G-3Q1LN01ZN3' # Crear uno nuevo?
 
 # Authors
 authors:
