--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 author: Permaprendices
-paginate: 30
+paginate: 10
 disqus: 'permaprendices-com' # Ojo, checkear https://staticman.net/docs/getting-started.html para tema comentarios
 locale: es_es
 lang: es_es
@@ -20,7 +20,7 @@ kramdown:
 sass:
   sass_dir: _sass
   style: :compressed
-ganalytics: 'G-3Q1LN01ZN3' # Crear uno nuevo?
+ganalytics: 'G-3Q1LN01ZN3'
 
 # Authors
 authors:
@@ -93,3 +93,8 @@ plugins:
 - jekyll-feed
 - jekyll-seo-tag
 - jekyll-archives
+
+#sitemap:
+#  xml:
+#    path: "/sitemap.xml"
+#    layout: custom_sitemap
