--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,4 +1,4 @@
-name: Desplegar permaprendices.com en GitHub Pages
+name: Desplegar Permaprendices en GitHub Pages
 
 on:
   push:
@@ -46,7 +46,7 @@ jobs:
       - name: Validar HTML y enlaces rotos
         run: |
           gem install html-proofer
-          htmlproofer ./_site --disable-external --only-4xx --check-html --report-invalid-tags --empty-alt-ignore --url-ignore "/localhost/,/127.0.0.1/"
+          htmlproofer ./_site --disable-external --only-4xx --checks "links,images" --report-invalid-tags --empty-alt-ignore --url-ignore "/localhost/,/127.0.0.1/"
         continue-on-error: true
 
       - name: Subir los datos procesados para despliegue
